--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <h1>Tarjetas</h1>
   <ul>
     {% for tarjeta in site.tarjetas %}
-      <li><a href="{{ tartjeta.url}}">{{ tartjeta.title}}</a></li>
+      <li><a href="{{ tarjeta.url}}">{{ tarjeta.title}}</a></li>
     {% endfor %}
   </ul>
 </div>
