Moved to contentful

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ layout: default
 <div class="home">
   <h1>Tarjetas</h1>
   <ul>
-    {% for tarjeta in site.tarjetas %}
-      <li><a href="{{ tarjeta.url}}">{{ tarjeta.title}}</a></li>
+    {% for tarjeta in site.data.contentful.spaces.tarjetas.tarjetas %}
+      <li><a href="{{ tarjeta.url}}">{{ tarjeta.nombre}}</a></li>
     {% endfor %}
   </ul>
 </div>
